# chickenstats-api-python

./: README.md  config.yaml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
sdk/: .gitlab-ci.yml  .travis.yml  git_push.sh  setup.py  tox.ini
sdk/.github/workflows/: python.yml
sdk/.openapi-generator/: FILES
sdk/docs/: ChickenNhlApi.md  GameStatsApi.md  HTTPValidationError.md  LinesApi.md  LinesCreate.md  LinesPublic.md  LoginApi.md  Message.md  NewPassword.md  PbpPublic.md  PlayByPlayApi.md  SeasonStatsApi.md  StatsApi.md  StatsCreate.md  StatsGame.md  StatsSeason.md  TeamStatsApi.md  TeamStatsCreate.md  TeamStatsPublic.md  Token.md  UpdatePassword.md  UserCreate.md  UserPublic.md  UserUpdate.md  UserUpdateMe.md  UsersApi.md  UsersPublic.md  ValidationError.md  ValidationErrorLocInner.md
